--- a/index.html
+++ b/index.html
@@ -433,20 +433,96 @@
                         </li>
                     </ul>
             </div>
+            <div class="subscribe">
+                <h2 class="join-title subscribe-title">Подпишитесь на рассылку</h2>
+                <lable>
+                    <input class="subscribe-mail" type="email" name="subscribe" placeholder="E-mail"/>
+                </lable>
+                <button class="subscribe-btn" type="submit">
+                    <span class="subscribe-btn-text">
+                        Подписаться
+                    </span>
+                    <svg class="subscribe-icon" width="24" height="24">
+                        <use href="./images/icons.svg.svg#icon-icon-send"></use>
+                    </svg>
+                </button>
+            </div>
         </div>
     </footer>
 
     <div class="backdrop is-hidden" data-modal>
-        <form class="modal-form">
+        <form class="modal-form" name="modal-form" autocomplete="on">
             <button class="modal-button" type="button" data-modal-close>
                 <svg width="18" height="18">
                     <use href="./images/symbol-defs.svg#icon-close"></use>
                 </svg>
             </button> 
+            <b class="modal-title">
+                Оставьте свои данные, мы вам перезвоним
+            </b>
+            <label class="input-box">
+                <span class="label-name">
+                    Имя
+                </span>
+                <span class="field-box">
+                    <input class="field" type="text" name="user-name" />
+                    <svg class="icon-field" width="18" height="18">
+                        <use href="./images/icons.svg.svg#icon-user-modal">
+                        </use>
+                    </svg>
+                </span>
+            </label>
+            <label class="input-box">
+                <span class="label-name">
+                    Телефон
+                </span>
+                    <input class="field" type="tel" name="phone-number" />
+                    <svg class="icon-field" width="18" height="18">
+                        <use href="./images/icons.svg.svg#icon-phone-modal">
+                        </use>
+                    </svg>
+            </label>
+            <label class="input-box">
+                <span class="label-name">
+                    Почта
+                </span>
+                    <input class="field" type="email" name="email" />
+                    <svg class="icon-field" width="18" height="18">
+                        <use href="./images/icons.svg.svg#icon-email-modal">
+                        </use>
+                    </svg>
+            </label>
+            <label class="input-box">
+                <span class="label-name">
+                    Комментарий
+                </span>
+                <textarea class="field comment" name="comment" rows="5" placeholder="Введите текст"></textarea>
+            </label>
+            <label class="agreement-box">
+                <input class="agreement-checkbox visually-hidden" type="checkbox" name="checked-checkbox" checked aria-hidden="true" tabindex="-1"/>
+                <span class="custom-checkbox" >
+                    <svg class="custom-icon" width="11" height="8">
+                        <use href="./images/icons.svg.svg#icon-icon-check">
+                        </use>
+                    </svg>
+                </span>
+                <span class="agreement">
+                    Соглашаюсь с рассылкой и принимаю
+                    <a href="">
+                        Условия договора
+                    </a>
+                </span>
+            </label>
+            <button class="button-send" type="submit">
+                Отправить
+            </button>
         </form>
+
     </div>
+
     <script src="./js/modal.js"></script>
 
 </body>
 
 </html>
+<!-- -->
