--- a/portfolio.html
+++ b/portfolio.html
@@ -289,6 +289,20 @@
                         </li>
                     </ul>
             </div>
+            <div class="subscribe">
+                <h2 class="join-title subscribe-title">Подпишитесь на рассылку</h2>
+                <lable>
+                    <input class="subscribe-mail" type="email" name="subscribe" placeholder="E-mail" />
+                </lable>
+                <button class="subscribe-btn" type="submit">
+                    <span class="subscribe-btn-text">
+                        Подписаться
+                    </span>
+                    <svg class="subscribe-icon" width="24" height="24">
+                        <use href="./images/icons.svg.svg#icon-icon-send"></use>
+                    </svg>
+                </button>
+            </div>
         </div>
     </footer>
 </body>
