--- a/index.html
+++ b/index.html
@@ -434,10 +434,8 @@
                     </ul>
             </div>
             <div class="subscribe">
-                <h2 class="join-title subscribe-title">Подпишитесь на рассылку</h2>
-                <lable>
+                <span class="join-title subscribe-title">Подпишитесь на рассылку</span>
                     <input class="subscribe-mail" type="email" name="subscribe" placeholder="E-mail"/>
-                </lable>
                 <button class="subscribe-btn" type="submit">
                     <span class="subscribe-btn-text">
                         Подписаться
