--- a/portfolio.html
+++ b/portfolio.html
@@ -254,46 +254,44 @@
             </div>
             <div class="join-section">
                 <h2 class="join-title">Присоединяйтесь</h2>
-                    <ul class="list join-list">
-                        <li class="join-list-item">
-                            <a class="join-link" href="https://www.instagram.com/" target="blank">
-                                <svg class="join-icon" width="20" height="20">
-                                    <use href="./images/symbol-defs.svg#icon-instagram">
-                                    </use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="join-list-item">
-                            <a class="join-link" href="https://twitter.com/" target="blank">
-                                <svg class="join-icon" width="20" height="20">
-                                    <use href="./images/symbol-defs.svg#icon-twitter">
-                                    </use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="join-list-item">
-                            <a class="join-link" href="https://www.facebook.com/" target="blank">
-                                <svg class="join-icon" width="20" height="20">
-                                    <use href="./images/symbol-defs.svg#icon-facebook-1">
-                                    </use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="join-list-item">
-                            <a class="join-link" href="https://www.linkedin.com/" target="blank">
-                                <svg class="join-icon" width="20" height="20">
-                                    <use href="./images/symbol-defs.svg#icon-linkedin">
-                                    </use>
-                                </svg>
-                            </a>
-                        </li>
-                    </ul>
+                <ul class="list join-list">
+                    <li class="join-list-item">
+                        <a class="join-link" href="https://www.instagram.com/" target="blank">
+                            <svg class="join-icon" width="20" height="20">
+                                <use href="./images/symbol-defs.svg#icon-instagram">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="join-list-item">
+                        <a class="join-link" href="https://twitter.com/" target="blank">
+                            <svg class="join-icon" width="20" height="20">
+                                <use href="./images/symbol-defs.svg#icon-twitter">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="join-list-item">
+                        <a class="join-link" href="https://www.facebook.com/" target="blank">
+                            <svg class="join-icon" width="20" height="20">
+                                <use href="./images/symbol-defs.svg#icon-facebook-1">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="join-list-item">
+                        <a class="join-link" href="https://www.linkedin.com/" target="blank">
+                            <svg class="join-icon" width="20" height="20">
+                                <use href="./images/symbol-defs.svg#icon-linkedin">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
             </div>
             <div class="subscribe">
-                <h2 class="join-title subscribe-title">Подпишитесь на рассылку</h2>
-                <lable>
-                    <input class="subscribe-mail" type="email" name="subscribe" placeholder="E-mail" />
-                </lable>
+                <span class="join-title subscribe-title">Подпишитесь на рассылку</span>
+                <input class="subscribe-mail" type="email" name="subscribe" placeholder="E-mail" />
                 <button class="subscribe-btn" type="submit">
                     <span class="subscribe-btn-text">
                         Подписаться
