--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                 <svg width="18" height="18">
                     <use href="./images/symbol-defs.svg#icon-close"></use>
                 </svg>
-            </button> 
+            </button>
             <b class="modal-title">
                 Оставьте свои данные, мы вам перезвоним
             </b>
@@ -507,7 +507,7 @@
                 </span>
                 <span class="agreement">
                     Соглашаюсь с рассылкой и принимаю
-                    <a href="">
+                    <a href="./index.html">
                         Условия договора
                     </a>
                 </span>
