--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                 <textarea class="field comment" name="comment" rows="5" placeholder="Введите текст"></textarea>
             </label>
             <label class="agreement-box">
-                <input class="agreement-checkbox visually-hidden" type="checkbox" name="checked-checkbox" checked aria-hidden="true" tabindex="-1"/>
+                <input class="agreement-checkbox visually-hidden" type="checkbox" name="checked-checkbox" aria-hidden="true" tabindex="-1"/>
                 <span class="custom-checkbox" >
                     <svg class="custom-icon" width="11" height="8">
                         <use href="./images/icons.svg.svg#icon-icon-check">
