--- a/index.html
+++ b/index.html
@@ -435,16 +435,18 @@
                     </ul>
             </div>
             <div class="subscribe">
-                <span class="join-title subscribe-title">Подпишитесь на рассылку</span>
-                    <input class="subscribe-mail" type="email" name="subscribe" placeholder="E-mail"/>
-                <button class="subscribe-btn" type="submit">
-                    <span class="subscribe-btn-text">
-                        Подписаться
-                    </span>
-                    <svg class="subscribe-icon" width="24" height="24">
-                        <use href="./images/icons.svg.svg#icon-icon-send"></use>
-                    </svg>
-                </button>
+                <form>
+                    <h2 class="join-title subscribe-title">Подпишитесь на рассылку</h2>
+                    <input class="subscribe-mail" type="email" name="subscribe" placeholder="E-mail" />
+                    <button class="subscribe-btn" type="submit">
+                        <span class="subscribe-btn-text">
+                            Подписаться
+                        </span>
+                        <svg class="subscribe-icon" width="24" height="24">
+                            <use href="./images/icons.svg.svg#icon-icon-send"></use>
+                        </svg>
+                    </button>
+                </form>
             </div>
         </div>
     </footer>
